# ing_statement_parser

./: LICENSE  README.md  pyproject.toml  run.cmd
scripts/: ing_parse_script.py
src/ing_parser/: base.py  data.py  folder.py  statement.py
src/ing_parser/io/: ez.py  yaffa.py  yaffa_categories.py
tests/: t_ing.py
