[project]
name = "ing_parse"
version = "0.1.0"
description = "Parse ING bank statements"
authors = [{ name = "tappi287", email = "tapper.stefan@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "pypdf==5.3.1",
    "pandas==2.2.3",
    "pytest>=8.3.5",
    "numpy==2.2.3",
    "pytz==2025.1",
    "six==1.17.0",
    "tzdata==2025.1",
]

[project.scripts]
ingparser = "scripts.ing_parse_script:main"

[tool.hatch.build.targets.sdist]
include = ["src/ing_parser"]

[tool.hatch.build.targets.wheel]
include = ["src/ing_parser"]

[tool.hatch.build.targets.wheel.sources]
"src/ing_parser" = "ing_parser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
